# resize_image

./: README.md  pyproject.toml  resize_image.py
