[tool.poetry]
name = "resize_image"
version = "0.1.0"
description = ""
authors = ["aki. <mark@aur.ll.to>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^7.0.0"
opencv-python-headless = "^4.2.0"
scikit-learn = "^0.22.1"
tensorflow = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
