[tool.poetry]
name = "resize_image"
version = "0.1.0"
description = ""
authors = ["aki. <mark@aur.ll.to>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "*"
opencv-python-headless = "*"
scikit-learn = "*"
tensorflow = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
